# ray-dreamer

./: .gitignore  README.md  activate_env.sh  build_docker.sh  pyproject.toml
basic_project/: tune.py
basic_project/common/: constants.py
basic_project/config/: basic-config.yaml
basic_project/delegator/: tuner.py
basic_project/delegator/construct/: dqn.py  ppo.py
basic_project/environment/: __init__.py  corridor.py
docker/: Dockerfile  requirements.txt
src/: tune.py
src/abstract/: registration.py
src/common/: constants.py  methods.py
src/conf/: trial.yaml
src/conf/trainable/: dreamerv3-xs.yaml  ppo-256-256-no-attention.yaml
src/construct/: __init__.py  dreamerv3.py  ppo.py
src/delegator/: __init__.py  trainable.py  tuner.py
src/delegator/construct/: __init__.py  ddpg.py  ppo.py
src/environment/: corridor.py
tests/integration/: test_dreamerv3.py
